# pokemon-app

./: .coverage  .env.example  .gitignore.bak.20250825-150312  .gitignore.bak.20250825-150328  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  coverage.xml  mypy.ini  mypy.precommit.ini  pyproject.toml  pyproject.toml.bak  ruff.toml
.github/workflows/: alerts-to-slack.yml  alerts.yml  ci-coverage.yml  ci.yml  daily-reports.yml  release-freeze.yml  release.yml
docs/: API_CARDS.md  API_PORTFOLIO.md  INSTRUCTIONS.md  PROCESS_CHECKLIST.md  PROJECT_LOG.md  PROJECT_STATE.json  README.md  RELEASE_POLICY.md  WORKFLOWS.md
docs/adr/: 0001-architecture-and-tooling.md  README.md
docs/requirements/: Backtesting_and_Evaluation_Specification.md  README.md  Signals_Methodology_Master_Architecture.md
examples/: sdk_quickstart.py
scripts/: commit_and_open_pr.sh  enforce_release_freeze.sh  finalize_s16.sh  finalize_s17.sh  lib.sh  morning_check.sh  open_pr.sh  protect_main.sh  remove_github_releases.sh  reset_zsh.sh  smoke_api.sh  start_feature.sh
src/poke_pricer/: __init__.py  cli.py  client.py  config.py  db.py  logging_config.py  models.py
src/poke_pricer/analytics/: backtest.py  data_access.py  movers.py  signals.py
src/poke_pricer/api/: app.py
src/poke_pricer/catalog/: stats.py
src/poke_pricer/ingest/: csv_ingest.py  schema.py
src/poke_pricer/io/: csv_io.py
src/poke_pricer/notify/: slack.py
src/poke_pricer/portfolio/: value.py
src/poke_pricer/reports/: anomalies.py  daily.py  qa.py  top_movers.py
src/poke_pricer/services/: seed.py
tests/: test_alerts.py  test_analytics.py  test_api.py  test_api_cards.py  test_api_portfolio.py  test_backtest_edgecases.py  test_catalog.py  test_cli.py  test_config.py  test_db_demo.py  test_ingest_csv.py  test_ingest_dir_validate.py  test_movers.py  test_notify_slack.py  test_portfolio.py  test_prices_export.py  test_reports_daily.py  test_reports_qa.py  test_reports_top_movers.py
