[project]
name = "pokemon-pricer"
version = "0.1.0"
description = "Pokémon Card Investment Platform: pricing engine, signals, and backtesting."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

authors = [{ name = "Pokémon Pricer Team" }]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "httpx>=0.27.0",
  "pyyaml>=6.0.1",
  "pandas>=2.2.2",
  "numpy>=1.26.0",
  "scikit-learn>=1.4.0",
  "scipy>=1.13.0",
  "statsmodels>=0.14.2",
  "sqlmodel>=0.0.21",
  "fastapi>=0.116.1",
  "uvicorn[standard]>=0.35.0",
]

[project.scripts]
poke-pricer = "poke_pricer.cli:main"

[tool.uv]
package = true
dev-dependencies = [
  "ruff>=0.5.6",
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "hypothesis>=6.112.0",
  "pre-commit>=3.7.1",
  "types-PyYAML>=6.0.12.20240808",
  "pytest-cov>=6.2.1",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "src/poke_pricer/__main__.py",
  "src/poke_pricer/logging_config.py",
]

[tool.coverage.report]
exclude_also = [
  "if TYPE_CHECKING:",
  "pragma: no cover",
]
